# server

./: Cargo.toml  Makefile  aws_parse_event.example.json  aws_parse_stepfunc.example.json  aws_stream_payload.example.json  samplerss.xml
src/: aws.rs  client.rs  entity.rs  lib.rs  model.rs  parser.rs  rss.rs  util.rs
