[package]
name = "dianliao_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = [ "derive" ] }
quick-xml = { version = "^0.21", features = [ "serialize" ] }
ureq = "^2.2"
flexi_logger = "^0.19"
log = "^0.4"
