[package]
name = "dianliao_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "^2.2"
flexi_logger = "^0.19"
log = "^0.4"
simple-error = "^0.2"
sloppy_podcast_tool = { git = "https://e.coding.net/zhetengcloud/podcast/sloppy_podcast_tool.git", tag = "v1.2" }
