[package]
name = "dianliao_cloud"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "^2.2"
flexi_logger = "^0.19"
log = "^0.4"
simple-error = "^0.2"
serde = { version = "^1.0", features = ["derive"] }
rusoto_dynamodb = { version = "^0.42", default_features = false, features=["rustls"] }
rusoto_core = { version = "^0.42", default_features = false, features=["rustls"] }
tokio = { version = "^1", features = ["full"] }
lambda_runtime = "^0.3"
chrono = "^0.4"
sloppy_podcast_tool = { git = "https://e.coding.net/zhetengcloud/podcast/sloppy_podcast_tool.git", tag = "v1.5" }
sloppy_auth = { git = "https://e.coding.net/zhetengcloud/serverless/sloppy_auth.git", tag = "v2.2.5" }
